# rotor

./: .gitignore  README.md
OOQP-master/ma27-1.0.0/: config.status
build_isolated/: catkin_make_isolated.cache
build_isolated/apriltag_ros/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/catkin_simple/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/cmake_utils/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/glog_catkin/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/grid_path_searcher/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/map_generator/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/mav_comm/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/mav_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/mav_planning_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/mav_state_machine_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/mav_system_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/odom_visualization/: CMakeCache.txt  CTestConfiguration.ini
build_isolated/plan_env/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/pose_utils/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/quadrotor_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/realsense_ros_gazebo/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rotors_comm/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  (+2 more)
devel/: .catkin  .rosinstall  setup.sh
devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
ma27-1.0.0/: Makefile
src/: .rosinstall
src/realsense_ros_gazebo/: CMakeLists.txt
src/realsense_ros_gazebo/include/realsense_gazebo_plugin/: RealSensePlugin.h
src/realsense_ros_gazebo/src/: camera2world.cpp  image2point.cpp
src/realsense_ros_gazebo/xacro/: depthcam.xacro
(+784 files in other folders)
